New page displaying inputted player names

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,11 +9,11 @@
 
     <h2>Enter your Names</h2>
 
-    <form class="player-names" action="/play" method="post">
-      <input type="text" id="player-1" name="player-1" value="Player 1">
-      <input type="text" id="player-2" name="player-2" value="Player 2">
+    <form class="player-names" action="/names" method="post">
+      <input type="text" id="player-1" name="player_1" value="Player 1">
+      <input type="text" id="player-2" name="player_2" value="Player 2">
       <input type="submit" value="Play">
     </form>
-    
+
   </body>
 </html>
