Add player 2 hit points and refactor tests

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,4 @@
 <h1><%= @player1_name %></h1>
 <h2> vs </h2>
 <h1><%= @player2_name %></h1>
+<p id="player_2_hp">Player 2 HP: <%= @player_2_hp %></p>
