Recent methods to change player 2's HP

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,5 +1,5 @@
-<h1>Attack reduced other player's HP by 10</h1>
+<h1 align="center">Attack reduced other player's HP by 10</h1>
 
-<form class="continue" action="/play" method="get">
+<form align="center" class="continue" action="/play" method="get">
   <input type="submit" value="Continue">
 </form>
