--- a/views/index.erb
+++ b/views/index.erb
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Battle</title>
+    <title align="center">Battle</title>
   </head>
   <body>
-    <h1>Welcome to Battle</h1>
+    <h1 align="center">Welcome to Battle</h1>
 
-    <h2>Enter your Names</h2>
+    <h2 align="center">Enter your names</h2>
 
-    <form class="player-names" action="/names" method="post">
+    <form align="center" class="player-names" action="/names" method="post">
       <input type="text" id="player-1" name="player_1" value="Player 1">
       <input type="text" id="player-2" name="player_2" value="Player 2">
       <input type="submit" value="Play">
