--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,4 +1,4 @@
-<h1 align="center">Attack reduced other player's HP by 10</h1>
+<h1 align="center">Attack reduced player's HP by 10</h1>
 
 <form align="center" class="continue" action="/play" method="get">
   <input type="submit" value="Continue">
