--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,5 +1,5 @@
-<h1 align="center"><%= $game.player_1.name %> attacked <%= $game.player_2.name %></h1>
-
+<h1 align="center"><%= $game.player_1.name %> attacked <%= $game.player_2.name %>, owch!</h1>
+<div align="center"><iframe src="https://giphy.com/embed/YM6eJxjESA2Lm" width="480" height="341" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/ouch-YM6eJxjESA2Lm"></a></p></div>
 <form align="center" class="continue" action="/play" method="get">
   <input type="submit" value="Continue">
 </form>
