--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,6 @@
 <h1 align="center"><%= @game.player_1.name %></h1>
+<h3 id="player_1_hp" align="center"> <%= @game.player_1.name %>'s HP: <%= @game.player_1.hit_points %> </h3>
+
 <h2 align="center">vs.</h2>
 <h1 align="center"><%= @game.player_2.name %></h1>
 <h3 id="player_2_hp" align="center"> <%= @game.player_2.name %>'s HP: <%= @game.player_2.hit_points %> </h3>
